Apply fixes for inspections