@@ -14,14 +14,14 @@ public class LogoLexerTest {
 
         List<LogoToken> tokens = lexer.tokenize();
 
-        assertEquals(LogoTokenType.TO, tokens.get(0).type);
-        assertEquals("to", tokens.get(0).text);
-        assertEquals(LogoTokenType.IDENTIFIER, tokens.get(1).type);
-        assertEquals("square", tokens.get(1).text);
-        assertEquals(LogoTokenType.VARIABLE, tokens.get(2).type);
-        assertEquals(":size", tokens.get(2).text);
-        assertEquals(LogoTokenType.END, tokens.get(4).type);
-        assertEquals("end", tokens.get(4).text);
+        assertEquals(LogoTokenType.TO, tokens.get(0).type());
+        assertEquals("to", tokens.get(0).text());
+        assertEquals(LogoTokenType.IDENTIFIER, tokens.get(1).type());
+        assertEquals("square", tokens.get(1).text());
+        assertEquals(LogoTokenType.VARIABLE, tokens.get(2).type());
+        assertEquals(":size", tokens.get(2).text());
+        assertEquals(LogoTokenType.END, tokens.get(4).type());
+        assertEquals("end", tokens.get(4).text());
     }
 
     @Test
@@ -57,14 +57,14 @@ public class LogoLexerTest {
 
         List<LogoToken> tokens = lexer.tokenize();
 
-        assertEquals(LogoTokenType.NUMBER, tokens.get(2).type);
-        assertEquals("50.5", tokens.get(2).text);
-        assertEquals(LogoTokenType.SYMBOL, tokens.get(3).type);
-        assertEquals(",", tokens.get(3).text);
-        assertEquals(LogoTokenType.NUMBER, tokens.get(4).type);
-        assertEquals("100", tokens.get(4).text);
-        assertEquals(LogoTokenType.NUMBER, tokens.get(6).type);
-        assertEquals("-25.25", tokens.get(6).text);
+        assertEquals(LogoTokenType.NUMBER, tokens.get(2).type());
+        assertEquals("50.5", tokens.get(2).text());
+        assertEquals(LogoTokenType.SYMBOL, tokens.get(3).type());
+        assertEquals(",", tokens.get(3).text());
+        assertEquals(LogoTokenType.NUMBER, tokens.get(4).type());
+        assertEquals("100", tokens.get(4).text());
+        assertEquals(LogoTokenType.NUMBER, tokens.get(6).type());
+        assertEquals("-25.25", tokens.get(6).text());
     }
 
     private void assertTokenType(String text, LogoTokenType tokenType) {
@@ -72,7 +72,7 @@ public class LogoLexerTest {
         List<LogoToken> tokens = lexer.tokenize();
 
         assertEquals(1, tokens.size());
-        assertEquals(tokenType, tokens.get(0).type);
+        assertEquals(tokenType, tokens.getFirst().type());
     }
 
 }
